<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".SignUpActivity">

    <TextView
            android:text="@string/email"
            android:layout_marginStart="50dp"
            android:layout_marginTop="180dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/signUp_email"/>
    <EditText
            android:id="@+id/signUp_emailInput"
            android:layout_below="@id/signUp_email"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:background="@drawable/edit_bg"
            android:layout_width="300dp" android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/signUp_password"
            android:text="@string/password"
            android:layout_marginStart="50dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:textColor="@color/white"
            android:layout_below="@id/signUp_emailInput"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/signUp_passwordInput"
            android:textColor="@color/white"
            android:background="@drawable/edit_bg"
            android:inputType="textPassword"
            android:layout_below="@id/signUp_password"
            android:layout_marginStart="50dp" android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_width="300dp" android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/signUp_confirmPassword"
            android:text="@string/confirm_password"
            android:layout_marginStart="50dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:textColor="@color/white"
            android:layout_below="@id/signUp_passwordInput"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/signUp_confirmPasswordInput"
            android:textColor="@color/white"
            android:background="@drawable/edit_bg"
            android:inputType="textPassword"
            android:layout_below="@id/signUp_confirmPassword"
            android:layout_marginStart="50dp" android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_width="300dp" android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/signUp_passwordNotMatch"
            android:text="@string/password_not_match"
            android:textColor="@color/colorAccent"
            android:layout_below="@id/signUp_confirmPasswordInput"
            android:layout_marginStart="50dp" android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/signUpBtn"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:background="@drawable/confirm_button"
            android:layout_below="@id/signUp_confirmPasswordInput"
            android:layout_marginStart="50dp"
            android:layout_marginTop="45dp"
            android:layout_width="300dp" android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/cancelBtn"
            android:text="@string/cancel_add_item"
            android:textColor="@color/black"
            android:background="@drawable/cancel_button"
            android:layout_below="@id/signUpBtn"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_width="300dp" android:layout_height="wrap_content"/>
</RelativeLayout>