<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        tools:context=".PriceListActivity">

    <ListView
            android:id="@+id/item_list"
            android:layout_above="@id/confirm_button"
            android:layout_width="match_parent" android:layout_height="match_parent"/>

    <TextView
            android:id="@+id/subtotalText"
            android:text="@string/subtotal"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20dp"
            android:layout_below="@id/item_list"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/subtotal"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20dp"
            android:layout_below="@id/item_list"
            android:layout_marginStart="13dp"
            android:layout_toRightOf="@id/subtotalText"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/confirm_button"
            android:text="@string/confirm"
            android:background="@drawable/confirm_button"
            android:backgroundTint="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</RelativeLayout>