<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".LoginActivity">
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:background="@drawable/edit_bg"
            android:ems="10"
            android:layout_marginStart="50dp"
            tools:layout_editor_absoluteY="331dp" tools:layout_editor_absoluteX="110dp" android:id="@+id/login_emailInput"
            android:layout_marginTop="5dp"/>
    <EditText
            android:layout_below="@id/login_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:background="@drawable/edit_bg"
            android:ems="10"
            android:layout_marginStart="50dp"
            tools:layout_editor_absoluteY="413dp" tools:layout_editor_absoluteX="110dp" android:id="@+id/login_passwordInput"
            android:layout_marginTop="5dp"/>
    <TextView
            android:text="@string/email"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/login_email" android:layout_marginBottom="4dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp" android:layout_marginTop="180dp" android:layout_alignParentTop="true"/>
    <TextView
            android:text="@string/password"
            android:layout_below="@id/login_emailInput"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/login_password" android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp" android:layout_centerVertical="true" android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"/>
    <Button
            android:text="@string/login"
            android:id="@+id/loginBtn"
            android:textColor="@color/black"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_passwordInput"
            android:background="@drawable/confirm_button"
            android:layout_marginTop="65dp" android:layout_marginStart="50dp"/>
    <TextView
            android:id="@+id/newUser"
            android:text="@string/new_user"
            android:textColor="@color/red"
            android:textSize="15dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/loginBtn"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</RelativeLayout>